# vmux

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md
tests/: test_config.py  test_detectors.py  test_naming.py  test_peer.py  test_sessions.py
vmux/: __init__.py  __main__.py  config.py  detectors.py  models.py  peer.py  poller.py  server.py  tmux.py
vmux/web/: CNAME  index.html  manifest.webmanifest  sw.js
