[project]
name = "vmux"
version = "0.1.0"
description = "Attention router for a swarm of CLI coding agents running in tmux — drive your Claude Code / Codex / Gemini swarm from your phone."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "imitation-alpha" }]
keywords = [
    "tmux", "claude-code", "codex", "gemini", "ai-agents", "coding-agents",
    "pwa", "remote-control", "fastapi", "terminal", "orchestration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "regex>=2024.0",        # bounded-time matching (timeout=) for user-supplied detector patterns
]

[project.optional-dependencies]
dev  = ["pytest>=8.0", "ruff>=0.6"]
# WebRTC remote access (NAT traversal, no VPN needed):
#   pip install "vmux[peer]"
# Linux also needs: apt install libavdevice-dev libavfilter-dev libopus-dev libvpx-dev pkg-config
# macOS  also needs: brew install ffmpeg opus libvpx pkg-config
peer = [
    "aiortc>=1.9",
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/imitation-alpha/vmux"
Repository = "https://github.com/imitation-alpha/vmux"
Issues = "https://github.com/imitation-alpha/vmux/issues"
Changelog = "https://github.com/imitation-alpha/vmux/blob/main/CHANGELOG.md"
Blog = "https://imitation-alpha.github.io/blog/orchestrating-coding-agents.html"

[project.scripts]
vmux = "vmux.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vmux"]

[tool.hatch.build.targets.sdist]
include = ["vmux", "tests", "config.example.yaml", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
# Real issues only (errors, pyflakes, import order) — not style modernization,
# to keep the contributor bar low on a deliberately small, 3.9-simple codebase.
select = ["E", "F", "I"]
ignore = ["E501"]   # long lines are fine here
